@@ -376,7 +376,6 @@ MANPAGES_ALIAS += \
 	man/sd_bus_message_append_array_iovec.3 \
 	man/sd_bus_message_append_array_space.3 \
 	man/sd_bus_message_get_reply_cookie.3 \
-	man/sd_bus_message_get_seqnum.3 \
 	man/sd_bus_negotiate_creds.3 \
 	man/sd_bus_negotiate_timestamps.3 \
 	man/sd_bus_open_system.3 \
@@ -432,7 +431,6 @@ man/sd_bus_error_set_errnof.3: man/sd_bus_error.3
 man/sd_bus_message_append_array_iovec.3: man/sd_bus_message_append_array.3
 man/sd_bus_message_append_array_space.3: man/sd_bus_message_append_array.3
 man/sd_bus_message_get_reply_cookie.3: man/sd_bus_message_get_cookie.3
-man/sd_bus_message_get_seqnum.3: man/sd_bus_message_get_monotonic_usec.3
 man/sd_bus_negotiate_creds.3: man/sd_bus_negotiate_fds.3
 man/sd_bus_negotiate_timestamps.3: man/sd_bus_negotiate_fds.3
 man/sd_bus_open_system.3: man/sd_bus_open_user.3
@@ -566,9 +564,6 @@ man/sd_bus_message_append_array_space.html: man/sd_bus_message_append_array.html
 	$(html-alias)
 
 man/sd_bus_message_get_reply_cookie.html: man/sd_bus_message_get_cookie.html
-	$(html-alias)
-
-man/sd_bus_message_get_seqnum.html: man/sd_bus_message_get_monotonic_usec.html
 	$(html-alias)
 
 man/sd_bus_negotiate_creds.html: man/sd_bus_negotiate_fds.html
